--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,13 @@
 = CubeShuffle
 
-include::docs/readme/badges.adoc[leveloffset=1]
+image:https://img.shields.io/github/workflow/status/philipborg/CubeShuffle/Rust%20build%20&%20test[GitHub Workflow Status]
+image:https://img.shields.io/badge/status-beta-green[Status]
+link:LICENSE[image:https://img.shields.io/github/license/philipborg/CubeShuffle[GitHub]]
+image:https://img.shields.io/badge/platform-Linux--x64%20%7C%20macOS--x64%20%7C%20Windows--x64%20%7C%20Android%20%7C%20Web%2FWasm32-informational[Platforms]
+
+link:https://github.com/philipborg/CubeShuffle/subscription[image:https://img.shields.io/github/watchers/philipborg/CubeShuffle?style=social[GitHub watchers]]
+image:https://img.shields.io/github/stars/philipborg/CubeShuffle?style=social[GitHub Repo stars]
+image:https://img.shields.io/github/followers/philipborg?style=social[GitHub followers]
 
 :toc:
 
@@ -15,4 +22,15 @@ A quick and easy shuffling method for cubes where cards can be assigned to and d
 Offers good control over the predictability as it can be controlled from being completely random to evenly distributed.
 Instructions on how to use it are available link:docs/distribution_shuffle.adoc[here].
 
-include::docs/readme/randomness.adoc[leveloffset=1]
+== Predictability and randomness
+
+You may be asking why anyone would want to control the randomness.
+Shouldn't the draft be completely random?
+If you want to, and it suits your cube, then I am not stopping you from complete randomness.
+Use link:docs/distribution_shuffle.adoc[Distribution Shuffle] with 100% randomness for all piles to speed up a completely random cube shuffle significantly.
+
+But most cubes don't actually want complete randomness.
+You want to ensure that most deck archetypes are playable and run a low chance of them being ruined by chance, or worse bad shuffling.
+(Though bad shuffling is significantly less likely when using CubeShuffle.)
+This is why you never see sealed booster packs in MTG with just one card color as they are far from completely random but rather have controlled randomness.
+It lends itself to a significantly better drafting experience.
