Publish non-archived packages. (#116)
* Publish non-archived packages.

* Update documentation to not refer to archives.

* Do not upload unpacked `app` for MacOS.

--- a/docs/installation/desktop.adoc
+++ b/docs/installation/desktop.adoc
@@ -5,11 +5,11 @@
 . Download the correct compiled version from the `Assets` list.
 +
 * Linux
-** link:https://appimage.org[AppImage] (#recommended#) - Download, extract and run `CubeShuffle-GUI.AppImage.tar.gz`. Optionally choose `Integrate and run` during startup to install persistently.
+** link:https://appimage.org[AppImage] (#recommended#) - Download and run `CubeShuffle-GUI.AppImage`. Optionally choose `Integrate and run` during startup to install persistently.
 ** Debian installation file (`deb`) - Download and install `CubeShuffle-GUI.deb`.
 * MacOS
 ** Disk Image (`dmg`) (#recommended#) - Download and install `CubeShuffle-GUI.dmg`.
 ** Executable (`app`) - Download and extract `CubeShuffle-GUI.app.tar.gz`.
 * Windows
-** Windows Installer (#recommended#) - Download and run `CubeShuffle-GUI.msi.zip`.
+** Windows Installer (#recommended#) - Download and run `CubeShuffle-GUI.msi`.
 Follow the installation steps.
